# video-analysis-model

./: .env  .gitignore  README.md  env.example  export_tensorrt.py  main.py  pyproject.toml  upload_to_roboflow.py
Dataset/: data_operations.py  roboflow_target_classes.example.txt  roboflow_target_classes.txt  upload_annonations.py
Training/: model_trainer.py
config/: __init__.py  thresholds.py
core/: __init__.py  geometry.py  tracking.py
detection_pipeline/: __init__.py  ball_deepsort.py  ball_kalman.py  ball_tracker.py  detector.py  possession.py  processor.py  reid.py  visualize.py  yolo_export.py
detectors/: __init__.py  make_miss_detector.py  pass_detector.py  shot_detector.py
models/: __init__.py  data_structures.py
outputs_videos/: 436c78a3-a6c7-4680-b1cc-5fb5d045331b.json  557fd136-c347-4cbc-9f79-d891271ba005.json  7dac604c-ebc2-4db5-b8db-5f19fc93ee29.json  aa0be665-f618-43ad-a2f3-618ff5528724.json  c1539adf-421b-40bc-b605-988fc825e4b6.json
team_clustering/: __init__.py  clustering.py  color_extraction.py  config.py  crop.py  pipeline.py  temporal_team_classification.py  visualization.py
temp_analysis/436c78a3-a6c7-4680-b1cc-5fb5d045331b/labels/: frame_000026.txt  frame_000076.txt
temp_analysis/da3f6761-0822-4681-bc93-c3dbf7be885d/: classes.txt
temp_analysis/da3f6761-0822-4681-bc93-c3dbf7be885d/labels/: frame_000001.txt  frame_000051.txt  frame_000101.txt
tracking/: __init__.py  appearance.py  identity_bridge.py  kalman_2d.py  pipeline.py  schemas.py  service.py
