[project]
name = "Temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "roboflow>=1.2.16",
    "ultralytics>=8.3.0",
    "torch",
    "torchvision",
    "supervision>=0.20.0",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "boxmot>=17.0.0",
    "ipykernel>=7.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

